--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -48,5 +48,5 @@
             <i class="fa fa-circle-o-notch fa-spin-fast"></i>
         </div>
 
-        @Scripts.Render("~/app")
-        @Scripts.Render("~/cadastro")
+        @*@Scripts.Render("~/app")
+        @Scripts.Render("~/cadastro")*@
