--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -131,7 +131,7 @@
     <i class="fa fa-circle-o-notch fa-spin-fast"></i>
 </div>
 
-<!-- common app js -->
+@*<!-- common app js -->
 <script src="~/js/settings.js"></script>
 <script src="~/js/app.js"></script>
 
@@ -147,7 +147,7 @@
 <script src="~/vendor/slimScroll/jquery.slimscroll.min.js"></script>
 <script src="~/vendor/widgster/widgster.js"></script>
 <script src="~/vendor/pace.js/pace.js" data-pace-options='{ "target": ".content-wrap", "ghostTime": 1000 }'></script>
-<script src="~/vendor/jquery-touchswipe/jquery.touchSwipe.js"></script>
+<script src="~/vendor/jquery-touchswipe/jquery.touchSwipe.js"></script>*@
 
 <!-- page specific js -->
 <script src="~/js/carro.js"></script>
